Don't let users delete the current root folder.

This is a kind of a quick fix to avoid crashing when the root is deleted
in memory. A more permanent solution needs to involve updating the cache
when deleting.

BUG: 336521